CHANGES IN FLTK 1.1.8

	- Added some GLUT4 functions (STR #1370)
	- Added "context_changed()" function for OpenGL windows
	  which allows efficent texture loading (STR #1372)
	- Added missing "const" to GLUT call (STR #1371)
	- Fixed stray FL_RELEASE events after clicking system
	  areas on OS X (STR #1376)
	- Fl_Tabs::value() is now "const" as described in the 
	  documentation (STR #1379)
	- FLUID now only writes definitions of "o" and "w"
	  variables as needed, reducing the number of "variable
	  is shadowed" warnings from GCC.
	- Added access to Xft font pointer (STR #1328)
	- Fixed endianness in OS X mouse cursor graphics (STR
	  #1348)
	- Fixed crash on mixed use of keyboard and mouse for
	  Fl_Menu_Button (STR #1356)
	- Fixed Fl_Window::visible() and shown() for OS X
	  (STR #1341)
	- Fixed Fl_Window::copy_label() losing copy (STR #1332)
	- Documentation fixes (STR #1336, STR #1329, STR #1339,
	  STR #1340)
	- Added support for floating point Fl_Spinner in the
	  API, documentation, and Fluid (STR #1331)
	- Repeat button now cancels timeout if it should get 
	  deactivated during a callback (STR #1330)
	- Added support for assigning Fl_Menu_Items to array 
	  variables in Fluid (STR #1280)
	- Added --with-archflags configure option to allow
	  passing of specific architecture-selection options to
	  the compiler and linker.
	- Fixed WIN32 window stacking bug (STR #1296)
	- Fixed wrong code generated by FLUID for Scrollbars (STR
	  #1287)
	- Loading a file would not update the Widget Properties
	  dialog in FLUID (STR #1326)
	- Fixed key compose sequences for shifted keys (STR
	  #1194)
	- Added text selection and copy to Fl_Help_View.
	- Fixed position of popup menu titles (STR #1322)
	- Showing any window will disable the current tooltip
	  so it won't pop over menus (STR #1321)
	- Updated documentation to reflect limitation of 
	  Fl::delete_widget() (STR #1306)
	- Fixed line wrapping in Fl_Text_Display (STR #1227)